{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 23,
  "lineage": "20eb93b2-05b3-e2d2-bf6b-d751c852b2c5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab-architect-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:175604865545:internet-gateway/igw-001afe194c6005ad0",
            "id": "igw-001afe194c6005ad0",
            "owner_id": "175604865545",
            "tags": {
              "Name": "lab-architect-gateway"
            },
            "tags_all": {
              "Name": "lab-architect-gateway"
            },
            "vpc_id": "vpc-0ca8602629340cb62"
          },
          "dependencies": [
            "aws_vpc.lab-architect-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "lab-architect-acl-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:175604865545:network-acl/acl-025818bf033192b9f",
            "egress": [],
            "id": "acl-025818bf033192b9f",
            "ingress": [],
            "owner_id": "175604865545",
            "subnet_ids": [
              "subnet-06e7f433fc17b54ab",
              "subnet-0c3373a547f94dbd7"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0ca8602629340cb62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.lab-architect-public-a",
            "aws_subnet.lab-architect-public-b",
            "aws_vpc.lab-architect-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "lab-architect-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-001afe194c6005ad0",
            "id": "r-rtb-0bb2bfd6fec6b84ad1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bb2bfd6fec6b84ad",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lab-architect-gateway",
            "aws_route_table.lab-architect-route-public",
            "aws_vpc.lab-architect-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lab-architect-route-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:175604865545:route-table/rtb-0bb2bfd6fec6b84ad",
            "id": "rtb-0bb2bfd6fec6b84ad",
            "owner_id": "175604865545",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001afe194c6005ad0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab-architect-route-public"
            },
            "tags_all": {
              "Name": "lab-architect-route-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca8602629340cb62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab-architect-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab-architect-route-public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025188582b5ae98c5",
            "route_table_id": "rtb-0bb2bfd6fec6b84ad",
            "subnet_id": "subnet-06e7f433fc17b54ab"
          },
          "dependencies": [
            "aws_route_table.lab-architect-route-public",
            "aws_subnet.lab-architect-public-a",
            "aws_vpc.lab-architect-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab-architect-route-public-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccf07978dd4c259e",
            "route_table_id": "rtb-0bb2bfd6fec6b84ad",
            "subnet_id": "subnet-0c3373a547f94dbd7"
          },
          "dependencies": [
            "aws_route_table.lab-architect-route-public",
            "aws_subnet.lab-architect-public-b",
            "aws_vpc.lab-architect-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab-architect-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:175604865545:subnet/subnet-06e7f433fc17b54ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e7f433fc17b54ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "175604865545",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab-architect-public-a"
            },
            "tags_all": {
              "Name": "lab-architect-public-a"
            },
            "vpc_id": "vpc-0ca8602629340cb62"
          },
          "dependencies": [
            "aws_vpc.lab-architect-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab-architect-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:175604865545:subnet/subnet-0c3373a547f94dbd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3373a547f94dbd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "175604865545",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab-architect-public-b"
            },
            "tags_all": {
              "Name": "lab-architect-public-b"
            },
            "vpc_id": "vpc-0ca8602629340cb62"
          },
          "dependencies": [
            "aws_vpc.lab-architect-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab-architect-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:175604865545:vpc/vpc-0ca8602629340cb62",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01f6ce67731449056",
            "default_route_table_id": "rtb-08af52509ba63ee65",
            "default_security_group_id": "sg-0568229ca2acb6696",
            "dhcp_options_id": "dopt-0fe07b6d7f7c0bb0d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ca8602629340cb62",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08af52509ba63ee65",
            "owner_id": "175604865545",
            "tags": {
              "Name": "lab-architect-vpc"
            },
            "tags_all": {
              "Name": "lab-architect-vpc"
            }
          }
        }
      ]
    }
  ]
}